[project]
name = "clean-img-tool"
version = "0.1.0"
description = "Delete unreferenced images from markdown files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
clean-img = "clean_img:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clean_img.py"]